--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
         <item>Serie A</item>
     </string-array>
 
+        <string name="your_points">Your Points: %d</string>
+
+
 
 </resources>
